<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical"
    tools:context="com.example.linoy.calc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:layout_marginBottom="10dp"
            android:background="@drawable/text"
            android:paddingStart="120dp"
            android:paddingTop="50dp"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/clean"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_0"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_1"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_2"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_3"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_4"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_5"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_6"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_7"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_8"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_9"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/plus"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/minus"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/division"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/X"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/result"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>
