<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second"
    android:orientation="vertical"
    tools:context="com.example.linoy.calc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:layout_marginBottom="10dp"
            android:background="@drawable/text"
            android:paddingStart="120dp"
            android:paddingTop="50dp"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/clean"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_0"
            android:textColor="@android:color/holo_blue_bright"
            android:textColorLink="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_1"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_2"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_3"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_4"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_5"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_6"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_7"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_8"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/_9"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/precent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/precent"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

        <Button
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/root"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/background_dark"
            android:text="@string/result"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>
